Final minimization: Ultra-clean main branch
Date: 2025-10-04 17:09:23.796

Removed from main (moved to develop):
- CONTRIBUTING.md (belongs in develop)
- CHANGELOG.md (belongs in develop)
- LICENSE (belongs in develop)

Updated .gitignore:
- Keep ALL IDE configs local (.vscode/, .cursor/, .idea/)
- IDE configs now ignored across all branches
- Each developer can have their own IDE setup

Main branch now contains ONLY:
- README.md (landing page)
- docs/README.md (docs overview)
- docs/conversations/README.md (conversation guide)
- docs/conversations/sacred/round-table-of-humanity.md (sacred discussion)
- .gitignore (to keep it clean)

5 files total. Ultra-minimal. Perfectly mysterious.

#ultra-minimal #clean-main #ide-configs-local

'In the implicate order of essence, only what matters remains.'

--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,12 @@ env/
 ENV/
 .venv/
 
-# IDE
-.vscode/settings.json
+# IDE - Keep all IDE configs local across all branches
+.vscode/
 .idea/
 *.swp
 *.swo
+.cursor/
 
 # Environment Variables
 .env
