Workspace architecture: Minimal gitignore for main branch
Date: 2025-10-04 17:43:10.119

Changed .gitignore strategy:
- Removed technical file blocks (app/, tests/, .github/, etc.)
- Main branch gitignore now only has essentials
- IDE configs still ignored across all branches
- Python/env/logs/data still ignored (universal)

Why this matters:
- When switching to main, Git can now properly clean workspace
- Technical files will be removed from workspace when on main
- Technical files will return when switching to develop
- No more mixed workspace state

Next: Switch to develop and add full gitignore there

#workspace-architecture #branch-specific-gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -51,17 +51,5 @@ logs/
 .DS_Store
 Thumbs.db
 
-# Project Specific
-conversations/2024/*/temp_*
-
-# Technical Implementation (for main branch)
-app/
-tests/
-.github/
-pyproject.toml
-requirements.txt
-Dockerfile
-docker-compose.yml
-Makefile
-setup_dev.py
-streamlit_app.py
+# Temporary Files
+conversations/*/temp_*
