--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,10 @@ env/
 ENV/
 .venv/
 
-# IDE - Keep all IDE configs local across all branches
-.vscode/
+# IDE - Basic files only
 .idea/
 *.swp
 *.swo
-.cursor/
 
 # Environment Variables
 .env
@@ -53,3 +51,21 @@ Thumbs.db
 
 # Temporary Files
 conversations/*/temp_*
+
+
+# Node modules - never track these
+**/node_modules/
+node_modules/
+landing-page/node_modules/
+
+# Build artifacts
+**/out/
+landing-page/out/
+landing-page/upload.log
+landing-page/*.log
+
+# Secrets and credentials
+landing-page/ftp-config.txt
+landing-page/*.ftp
+landing-page/*.ini
+
